brat/test/golden/error/arith_implicit_conversion3.brat
f(Int, Float) -> Int
f(x, y) = y + x
